# rust_wasm_encryption_machine

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  styles.css
assets/: image.ppm
src/: api.rs  lib.rs  main.rs
tests/assets/: only_header_3_digit_width_3_digit_height.ppm
