[package]
name = "rust_wasm_playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.rand]
version = "0.8"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.rsa]
version = "0.6.1"
features = ["serde"]

[dependencies.wasm-bindgen]
version = "0.2.80"

[dependencies.web-sys]
version = "0.3"
features = [
	'Document',
  	'Element',
  	'HtmlElement',
  	'Node',
  	'Window',
]

[profile.release]
lto = true
