[package]
name = "rust_wasm_playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies.anyhow]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.rand]
version = "0.8"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.base64]
version = "0.13.0"

[dependencies.rsa]
version = "0.6.1"
features = ["serde"]

[dependencies.wasm-bindgen]
version = "0.2.80"

[dev-dependencies.wasm-bindgen-test]
version = "0.3.0"

[dependencies.web-sys]
version = "0.3"
features = [
	'console',
	'Document',
  	'Element',
  	'HtmlElement',
  	'Node',
  	'Window',
	'InputEvent',
	'HtmlInputElement',
	'HtmlTextAreaElement',
]

[profile.release]
lto = true
